--- a/index.html
+++ b/index.html
@@ -4,59 +4,72 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=, initial-scale=1.0" />
-    <title>goit-markup-hw-01</title>
+    <title>goit-markup-hw-02</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="./css/styles.css" />
   </head>
-
   <body>
     <!--Шапка сайта-->
     <header>
       <nav>
-        <a href="./index.html"> WebStudio </a>
-        <ul>
-          <li><a href="">Студія</a></li>
-          <li><a href="">Портфоліо</a></li>
-          <li><a href="">Контакти</a></li>
+        <a href="./index.html" class="logo">
+          <span class="span">Web</span>Studio
+        </a>
+        <ul class="site-nav list">
+          <li><a href="./index.html" class="link">Студія</a></li>
+          <li><a href="./portfolio.html" class="link">Портфоліо</a></li>
+          <li><a href="" class="link">Контакти</a></li>
         </ul>
       </nav>
-      <ul>
-        <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-        <li><a href="tol:+380961111111">+38 096 111 11 11</a></li>
+      <ul class="contact-list">
+        <li>
+          <a href="mailto:info@devstudio.com" class="link"
+            >info@devstudio.com</a
+          >
+        </li>
+        <li><a href="tol:+380961111111" class="link">+38 096 111 11 11</a></li>
       </ul>
     </header>
     <main>
       <!--Замовити послугу-->
-      <section>
-        <h1>ЕФЕКТИВНІ РІШЕННЯ ДЛЯ <br />ВАШОГО БІЗНЕСУ<br /></h1>
-        <button>Замовити послугу</button>
+      <section class="hero">
+        <h1 class="hero-title">
+          ЕФЕКТИВНІ РІШЕННЯ ДЛЯ <br />ВАШОГО БІЗНЕСУ<br />
+        </h1>
+        <button class="button">Замовити послугу</button>
       </section>
 
       <!--Переваги-->
-      <section>
-        <h2>Переваги</h2>
-        <ul>
+      <section class="section">
+        <ul class="feature-list">
           <li>
-            <h3>УВАГА ДО ДЕТАЛЕЙ</h3>
-            <p>
+            <h3 class="title">УВАГА ДО ДЕТАЛЕЙ</h3>
+            <p class="text">
               Ідейні міркування, і навіть початок повсякденної роботи з
               формування позиції.
             </p>
           </li>
           <li>
-            <h3>ПУНКТУАЛЬНІСТЬ</h3>
-            <p>
+            <h3 class="title">ПУНКТУАЛЬНІСТЬ</h3>
+            <p class="text">
               Завдання організації, особливо рамки і місце навчання кадрів тягне
               у себе.
             </p>
           </li>
           <li>
-            <h3>ПЛАНУВАННЯ</h3>
-            <p>
+            <h3 class="title">ПЛАНУВАННЯ</h3>
+            <p class="text">
               Так само консультація з широким активом значною мірою зумовлює.
             </p>
           </li>
           <li>
-            <h3>СУЧАСНІ ТЕХНОЛОГІЇ</h3>
-            <p>
+            <h3 class="title">СУЧАСНІ ТЕХНОЛОГІЇ</h3>
+            <p class="text">
               Значимість цих проблем настільки очевидна, що реалізація планових
               завдань.
             </p>
@@ -65,8 +78,8 @@
       </section>
 
       <!--Чим ми займаємся-->
-      <section>
-        <h2>Чим ми займаємося</h2>
+      <section class="section">
+        <h2 class="section-title">Чим ми займаємося</h2>
         <ul>
           <li><img src="./images/img.jpg" alt="box1" width="370" /></li>
           <li><img src="./images/box2.jpg" alt="box2" width="370" /></li>
@@ -75,43 +88,47 @@
       </section>
 
       <!--Наша команда-->
-      <section>
-        <h2>Наша команда</h2>
-        <ul>
+      <section class="section">
+        <h2 class="section-title">Наша команда</h2>
+        <ul class="team-list">
           <li>
             <img src="./images/img1.jpg" alt="img1" width="270" />
-            <h3>Ігор Дем'яненко</h3>
-            <p>Product Designer</p>
+            <h3 class="title">Ігор Дем'яненко</h3>
+            <p class="team">Product Designer</p>
           </li>
           <li>
             <img src="./images/img2.jpg" alt="img2" width="270" />
-            <h3>Ольга Рєпіна</h3>
-            <p>Frontend Developer</p>
+            <h3 class="title">Ольга Рєпіна</h3>
+            <p class="team">Frontend Developer</p>
           </li>
           <li>
             <img src="./images/img3.jpg" alt="img3" width="270" />
-            <h3>Микола Тарасов</h3>
-            <p>Marketing</p>
+            <h3 class="title">Микола Тарасов</h3>
+            <p class="team">Marketing</p>
           </li>
           <li>
             <img src="./images/img4.jpg" alt="img4" width="270" />
-            <h3>Михайло Єрмаков</h3>
-            <p>UI Desaigner</p>
+            <h3 class="title">Михайло Єрмаков</h3>
+            <p class="team">UI Desaigner</p>
           </li>
         </ul>
       </section>
     </main>
 
     <!--Футер-->
-    <footer>
-      <a href="./index.html"> WebStudio </a>
-      <address>
-        м. Київ, пр-т Лесі Українки, 26
-        <ul>
-          <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-          <li><a href="tol:+380961111111">+38 096 111 11 11</a></li>
-        </ul>
-      </address>
+    <footer class="footer">
+      <a href="./index.html" class="footer-logo">
+        <span class="span-footer">Web</span>Studio
+      </a>
+      <ul class="contact-list">
+        <li class="adress">м. Київ, пр-т Лесі Українки, 26</li>
+        <li>
+          <a href="mailto:info@devstudio.com" class="link"
+            >info@devstudio.com</a
+          >
+        </li>
+        <li><a href="tol:+380961111111" class="link">+38 096 111 11 11</a></li>
+      </ul>
     </footer>
   </body>
 </html>
